add license, update readme

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "feel-the-bern"
   ],
   "author": "Chris Peters",
-  "license": "UNLICENSED",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/c-concat-p/learn-with-bern/issues"
   },
